# nono

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  docs-dispatch.yml  release.yml  sign-instruction-files.yml
bindings/c/: Cargo.toml
bindings/c/include/: nono.h
bindings/c/src/: capability_set.rs  fs_capability.rs  lib.rs  state.rs  types.rs
bindings/node/: index.d.ts  index.js  nono_napi.node  package-lock.json  test_errors.js  test_platform.js  test_query.js  test_state.js
crates/nono/: Cargo.toml
crates/nono-cli/: Cargo.toml  README.md  build.rs
crates/nono-cli/data/: policy.json  security-lists.toml
crates/nono-cli/src/: capability_ext.rs  cli.rs  exec_strategy.rs  hooks.rs  learn.rs  main.rs  network_policy.rs  output.rs  policy.rs  query_ext.rs  sandbox_state.rs  setup.rs  terminal_approval.rs
crates/nono-proxy/: Cargo.toml  README.md
crates/nono-proxy/src/: reverse.rs  server.rs  token.rs
crates/nono/src/: capability.rs  diagnostic.rs  error.rs  keystore.rs  lib.rs  query.rs  state.rs
docs/: docs.json
docs/cli/clients/: claude-code.mdx
docs/cli/features/: credential-injection.mdx  profiles-groups.mdx
docs/clients/: claude-code.mdx  openclaw.mdx  opencode.mdx
docs/security/: profiles.mdx  seatbelt.mdx  signing.mdx
docs/usage/: examples.mdx  flags.mdx  index.mdx  secrets.mdx  troubleshooting.mdx
examples/ecs-fargate/: Dockerfile  ECS-FARGATE.md  deploy.sh  task-definition.json  test-sandbox.sh
scripts/: prepare-release.sh  test-linux.sh
shim/: nono_shim.c
(+22 files in other folders)
