[workspace]
resolver = "2"
members = [
    "crates/nono",
    "crates/nono-cli",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.74"
authors = ["Luke Hinds"]
license = "Apache-2.0"
repository = "https://github.com/lukehinds/nono"
homepage = "https://github.com/lukehinds/nono"

[workspace.dependencies]
# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Logging
tracing = "0.1"

# Secure credential handling
zeroize = { version = "1", features = ["alloc"] }

# Testing
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
